# filmr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  check.sh  dist-workspace.toml  filmr_app-installer.ps1.txt  filmr_app-installer.sh.txt  index.html  oranda.json
.cargo/: config.toml
.github/workflows/: rust.yml  web.yml
apps/filmr/: Cargo.toml  Trunk.toml  index.html  patch_dist.py  worker.js
apps/filmr/src/: bridge.rs  cli.rs  config.rs  exif_utils.rs  lib.rs  raw.rs  types.rs  worker.rs
apps/filmr/src/ui/: app.rs  mod.rs  theme.rs
apps/filmr/src/ui/app/: io.rs  mod.rs  processing.rs  update.rs  workers.rs
apps/filmr/src/ui/panels/: central.rs  controls.rs  metrics.rs  mod.rs  settings.rs  studio.rs
apps/filmr/src/ui/panels/controls/: mod.rs  preset_io.rs  professional.rs  shutter_speed.rs  simple.rs
apps/filmr/wix/: main.wxs
artifacts/: index.html
benches/: mode_benchmark.rs  processing_benchmark.rs
book/: 404.html  dynamic_range.html  film_characteristics.html  index.html  metrics.html  photochemistry.html  print.html  reference_data.html  searchindex.js  searchindex.json  spectral_sensitivity.html  validation.html
changelog/: index.html
changelog/v0.3.9/: index.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md  dynamic_range.md  film_characteristics.md  metrics.md  photochemistry.md  reference_data.md  rendering_pipeline.md  spectral_engine.md  spectral_sensitivity.md  validation.md
examples/: auto_calibrate.rs  benchmark_sop.rs  chart_diagnosis.rs  demo.rs  generate_chart.rs  run_simulation.rs  verify_quality.rs  visual_stress_test.rs
examples/gui_demo/: Cargo.toml
examples/gui_demo/src/: app.rs  main.rs  ui.rs
examples/gui_demo/src/panels/: central.rs  controls.rs  metrics.rs  mod.rs
src/: cie_data.rs  depth.rs  film.rs  film_layer.rs  gpu.rs  gpu_pipelines.rs  grain.rs  lib.rs  light_leak.rs  metrics.rs  physics.rs  pipeline.rs  presets.rs  processor.rs  shake.rs  spectral.rs  spectral_engine.rs  utils.rs
src/gpu_pipelines/: common.rs  develop.rs  gaussian.rs  grain.rs  halation.rs  light_leak.rs  linearize.rs  mod.rs
src/presets/: agfa.rs  fujifilm.rs  ilford.rs  kodak.rs  mod.rs  other.rs  polaroid.rs
src/shaders/: blur.wgsl  develop.wgsl  grain.wgsl  halation.wgsl  light_leak.wgsl  linearize.wgsl  output.wgsl
tests/: accurate_integration.rs  accurate_model_stages.rs  accurate_properties.rs  chemical_stress_tests.rs  diag_chart.rs  diag_compare.rs  diag_histogram.rs  diag_real_image.rs  micro_motion.rs  spec_viz.rs  validation.rs  verify_gpu.rs  verify_grain.rs  verify_pipeline.rs  verify_spectral.rs
tools/: analyze_film.py
web/: filmr_app-88cd0d25ada8680.js  filmr_app.js  index.html
xtask/: Cargo.toml
xtask/src/: main.rs
