[package]
name = "filmr"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "examples/gui_demo",
]

[dependencies]
image = "0.24"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
rayon = "1.8" # For parallel processing of pixels

[dev-dependencies]
imageproc = "0.23.0"
rusttype = "0.9.3"
