[package]
name = "filmr"
version = "0.1.0"
edition = "2021"
authors = ["Benign X <1341398182@qq.com>", "W-Mai"]
description = "A high-fidelity, physics-based film simulation engine written in Rust."
readme = "README.md"
repository = "https://github.com/W-Mai/filmr"
license = "MIT"
keywords = ["film", "simulation", "photography", "image-processing", "analog"]
categories = ["multimedia::images", "rendering", "science"]

[workspace]
members = [
    ".",
    "examples/gui_demo",
]

[dependencies]
image = "0.24"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
rayon = "1.8" # For parallel processing of pixels
palette = "0.7.6"
rustfft = "6.4.1"

[dev-dependencies]
imageproc = "0.23.0"
rusttype = "0.9.3"
